--- a/backend/backendstyle.css
+++ b/backend/backendstyle.css
@@ -11,7 +11,8 @@
 #vc_ui-panel-edit-element[data-vc-shortcode="pwe_exhibitor_generator"],
 #vc_ui-panel-edit-element[data-vc-shortcode="pwe_profile"],
 #vc_ui-panel-edit-element[data-vc-shortcode="pwe_registration"],
-#vc_ui-panel-edit-element[data-vc-shortcode="pwe_map"] {
+#vc_ui-panel-edit-element[data-vc-shortcode="pwe_map"],
+#vc_ui-panel-edit-element[data-vc-shortcode="pwe_attractions"] {
 
     .backend-area-full-width { 
         width: 100% !important;
