--- a/includes/news/classes/news-summary/news-summary-style.css
+++ b/includes/news/classes/news-summary/news-summary-style.css
@@ -382,18 +382,59 @@
 
 
 
+.pwe-news-summary__iframe {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+}
 .pwe-news-summary__iframe-container {
     display: flex;
     align-items: stretch;
     gap: 24px;
 }
+.pwe-news-summary__iframe-video {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
 .pwe-news-summary__iframe-container iframe {
-    flex: .6;
     border-radius: 24px;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.05);
+    aspect-ratio: 16/9;
+}
+.pwe-news-summary__iframe-box {
+    flex: .6;
+    display: flex;
+    justify-content: center;
+    border-radius: 24px;
+    overflow: hidden;
+}
+.pwe-news-summary__iframe-default {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    aspect-ratio: 16 / 9;
+    height: 100%;
+    width: 100%;
+}
+.pwe-news-summary__iframe-default img {
+    max-width: 80px;
+    cursor: pointer;
+    transition: .3s 
+ease;
+}
+.pwe-news-summary__iframe-default img:hover {
+    transform: scale(1.1);
 }
 .pwe-news-summary__iframe-desc {
     flex: .4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .pwe-news-summary__gallery-slide {
     aspect-ratio: 3/2;
